--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
 <body>
     <div class="hero">
         <div class="hero-content">
-            <h1 class="hero-title">messageboxd</h1>
+            <h1 class="hero-title"><a href="/">messageboxd</a></h1>
             <button id="darkModeToggle" class="dark-mode-toggle" aria-label="Toggle dark mode">
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
                     stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
@@ -33,8 +33,9 @@
             </button>
         </div>
     </div>
-    {{ content }}
-
+    <div class="container">
+        {{ content }}
+    </div>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             const darkModeToggle = document.getElementById('darkModeToggle');
