--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,6 +43,15 @@
     <div class="container">
         {{ content }}
     </div>
+
+    <footer class="site-footer">
+        <div class="footer-content">
+            <p>messageboxd by <a href="https://linktr.ee/emasdeu" target="_blank">Enric Masdeu</a> | heavily inspired by
+                <a href="https://deathgenerator.com" target="_blank">deathgenerator</a>
+            </p>
+        </div>
+    </footer>
+
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             const darkModeToggle = document.getElementById('darkModeToggle');
